--- a/dp-search-mobile-optimized.html
+++ b/dp-search-mobile-optimized.html
@@ -5,7 +5,7 @@
 	<link rel="preload" href="css/jade-dpuikit-rwd-on-scaffolding.css" as="style"/>
 	<link rel="preload" href="css/jade-dpuikit-rwd-on-type.css" as="style"/>
 	<link rel="preload" href="css/jade-dpuikit-rwd-on-grid.css" as="style"/>
-	<link rel="preload" href="css/jade-dpuikit-rwd-on-tables.css" as="style"/>
+	<!--<link rel="preload" href="css/jade-dpuikit-rwd-on-tables.css" as="style"/>-->
 	<link rel="preload" href="css/jade-dpuikit-rwd-on-forms.css" as="style"/>
 	<link rel="preload" href="css/jade-dpuikit-rwd-on-buttons.css" as="style"/>
 	<link rel="preload" href="css/jade-dpuikit-rwd-on-2.css" as="style"/>
@@ -79,7 +79,7 @@
 	<link href="css/jade-dpuikit-rwd-on-scaffolding.css" rel="stylesheet"/>
 	<link href="css/jade-dpuikit-rwd-on-type.css" rel="stylesheet"/>
 	<link href="css/jade-dpuikit-rwd-on-grid.css" rel="stylesheet"/>
-	<link href="css/jade-dpuikit-rwd-on-tables.css" rel="stylesheet"/>
+	<!--<link href="css/jade-dpuikit-rwd-on-tables.css" rel="stylesheet"/>-->
 	<link href="css/jade-dpuikit-rwd-on-forms.css" rel="stylesheet"/>
 	<link href="css/jade-dpuikit-rwd-on-buttons.css" rel="stylesheet"/>
 	<link href="css/jade-dpuikit-rwd-on-2.css" rel="stylesheet" />
