--- a/dp-search-mobile-optimized.html
+++ b/dp-search-mobile-optimized.html
@@ -2002,8 +2002,39 @@
 	</div>
 </footer>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="//www.docplanner-platform.com/staging/js/goro-search.js?v=3830533961" defer="defer"></script>
+
+<script>
+  function loadScript (src, callback) {
+    var s,
+      r,
+      t;
+    r = false;
+    s = document.createElement('script');
+    s.type = 'text/javascript';
+    s.defer = true;
+    s.src = src;
+    s.onload = s.onreadystatechange = function () {
+      if (!r && (!this.readyState || this.readyState === 'complete')) {
+        r = true;
+        callback();
+      }
+    };
+    t = document.getElementsByTagName('script')[0];
+    t.parentNode.insertBefore(s, t);
+  }
+
+  loadScript('//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js', function () {
+    var scripts = document.querySelectorAll('[data-defer-script-src]');
+
+    for (var i = 0; i < scripts.length; i++) {
+      var script = scripts[i];
+      script.setAttribute('src', script.getAttribute('data-defer-script-src'));
+    }
+  });
+</script>
+
+
+<script data-defer-script-src="//www.docplanner-platform.com/staging/js/goro-search.js?v=3830533961" defer="defer"></script>
 
 <script type="text/javascript">
   function downloadJSAtOnload() {
