--- a/speedtest-preconnect.html
+++ b/speedtest-preconnect.html
@@ -4,28 +4,28 @@
 <head>
 
 
-	<link rel="dns-prefetch" href="//ajax.googleapis.com"/>
-	<link rel="dns-prefetch" href="//apis.google.com"/>
-	<link rel="dns-prefetch" href="//beacon-1.newrelic.com"/>
-	<link rel="dns-prefetch" href="//cdn.optimizely.com/"/>
-	<link rel="dns-prefetch" href="//cdnjs.cloudflare.com"/>
-	<link rel="dns-prefetch" href="//d32wn3pusq02lv.cloudfront.net"/>
-	<link rel="dns-prefetch" href="//docplanner.com"/>
-	<link rel="dns-prefetch" href="//facebook.com"/>
-	<link rel="dns-prefetch" href="//fbstatic-a.akamaihd.net"/>
-	<link rel="dns-prefetch" href="//lh4.googleusercontent.com"/>
-	<link rel="dns-prefetch" href="//maps.google.com"/>
-	<link rel="dns-prefetch" href="//maps.gstatic.com"/>
-	<link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com/"/>
-	<link rel="dns-prefetch" href="//s3-eu-west-1.amazonaws.com"/>
-	<link rel="dns-prefetch" href="//ssl.google-analytics.com"/>
-	<link rel="dns-prefetch" href="//ssl.gstatic.com"/>
-	<link rel="dns-prefetch" href="//stats.g.doubleclick.net/"/>
-	<link rel="dns-prefetch" href="//www.docplanner-platform.com/"/>
-	<link rel="dns-prefetch" href="//www.google-analytics.com"/>
-	<link rel="dns-prefetch" href="//www.googletagmanager.com"/>
-	<link rel="dns-prefetch" href="//fonts.googleapis.com">
-	<link rel="dns-prefetch" href="//fonts.gstatic.com">
+	<link rel="preconnect" crossorigin href="//ajax.googleapis.com"/>
+	<link rel="preconnect" crossorigin href="//apis.google.com"/>
+	<link rel="preconnect" crossorigin href="//beacon-1.newrelic.com"/>
+	<link rel="preconnect" crossorigin href="//cdn.optimizely.com/"/>
+	<link rel="preconnect" crossorigin href="//cdnjs.cloudflare.com"/>
+	<link rel="preconnect" crossorigin href="//d32wn3pusq02lv.cloudfront.net"/>
+	<link rel="preconnect" crossorigin href="//docplanner.com"/>
+	<link rel="preconnect" crossorigin href="//facebook.com"/>
+	<link rel="preconnect" crossorigin href="//fbstatic-a.akamaihd.net"/>
+	<link rel="preconnect" crossorigin href="//lh4.googleusercontent.com"/>
+	<link rel="preconnect" crossorigin href="//maps.google.com"/>
+	<link rel="preconnect" crossorigin href="//maps.gstatic.com"/>
+	<link rel="preconnect" crossorigin href="//maxcdn.bootstrapcdn.com/"/>
+	<link rel="preconnect" crossorigin href="//s3-eu-west-1.amazonaws.com"/>
+	<link rel="preconnect" crossorigin href="//ssl.google-analytics.com"/>
+	<link rel="preconnect" crossorigin href="//ssl.gstatic.com"/>
+	<link rel="preconnect" crossorigin href="//stats.g.doubleclick.net/"/>
+	<link rel="preconnect" crossorigin href="//www.docplanner-platform.com/"/>
+	<link rel="preconnect" crossorigin href="//www.google-analytics.com"/>
+	<link rel="preconnect" crossorigin href="//www.googletagmanager.com"/>
+	<link rel="preconnect" crossorigin href="//fonts.googleapis.com">
+	<link rel="preconnect" crossorigin href="//fonts.gstatic.com">
 
 	<meta charset="utf-8"/>
 	<title>Dobrý den,
