--- a/speedtest-preconnect.html
+++ b/speedtest-preconnect.html
@@ -22,10 +22,13 @@
 	<link rel="preconnect" crossorigin href="//ssl.gstatic.com"/>
 	<link rel="preconnect" crossorigin href="//stats.g.doubleclick.net/"/>
 	<link rel="preconnect" crossorigin href="//www.docplanner-platform.com/"/>
+	<link rel="preconnect" crossorigin href="//platform.znamylekar.cz"/>
 	<link rel="preconnect" crossorigin href="//www.google-analytics.com"/>
 	<link rel="preconnect" crossorigin href="//www.googletagmanager.com"/>
 	<link rel="preconnect" crossorigin href="//fonts.googleapis.com">
 	<link rel="preconnect" crossorigin href="//fonts.gstatic.com">
+	<link rel="preconnect" crossorigin href="//cdn.mxpnl.com">
+	<link rel="preconnect" crossorigin href="//d24n15hnbwhuhn.cloudfront.net/">
 
 	<meta charset="utf-8"/>
 	<title>Dobrý den,
