--- a/speedtest-preconnect.html
+++ b/speedtest-preconnect.html
@@ -4,31 +4,31 @@
 <head>
 
 
-	<link rel="preconnect" crossorigin href="//ajax.googleapis.com"/>
-	<link rel="preconnect" crossorigin href="//apis.google.com"/>
-	<link rel="preconnect" crossorigin href="//beacon-1.newrelic.com"/>
-	<link rel="preconnect" crossorigin href="//cdn.optimizely.com/"/>
-	<link rel="preconnect" crossorigin href="//cdnjs.cloudflare.com"/>
-	<link rel="preconnect" crossorigin href="//d32wn3pusq02lv.cloudfront.net"/>
-	<link rel="preconnect" crossorigin href="//docplanner.com"/>
-	<link rel="preconnect" crossorigin href="//facebook.com"/>
-	<link rel="preconnect" crossorigin href="//fbstatic-a.akamaihd.net"/>
-	<link rel="preconnect" crossorigin href="//lh4.googleusercontent.com"/>
-	<link rel="preconnect" crossorigin href="//maps.google.com"/>
-	<link rel="preconnect" crossorigin href="//maps.gstatic.com"/>
-	<link rel="preconnect" crossorigin href="//maxcdn.bootstrapcdn.com/"/>
-	<link rel="preconnect" crossorigin href="//s3-eu-west-1.amazonaws.com"/>
-	<link rel="preconnect" crossorigin href="//ssl.google-analytics.com"/>
-	<link rel="preconnect" crossorigin href="//ssl.gstatic.com"/>
-	<link rel="preconnect" crossorigin href="//stats.g.doubleclick.net/"/>
-	<link rel="preconnect" crossorigin href="//www.docplanner-platform.com/"/>
-	<link rel="preconnect" crossorigin href="//platform.znamylekar.cz"/>
-	<link rel="preconnect" crossorigin href="//www.google-analytics.com"/>
-	<link rel="preconnect" crossorigin href="//www.googletagmanager.com"/>
-	<link rel="preconnect" crossorigin href="//fonts.googleapis.com">
-	<link rel="preconnect" crossorigin href="//fonts.gstatic.com">
-	<link rel="preconnect" crossorigin href="//cdn.mxpnl.com">
-	<link rel="preconnect" crossorigin href="//d24n15hnbwhuhn.cloudfront.net/">
+	<link rel="preconnect" href="//ajax.googleapis.com" crossorigin/>
+	<link rel="preconnect" href="//apis.google.com" crossorigin/>
+	<link rel="preconnect" href="//beacon-1.newrelic.com" crossorigin/>
+	<link rel="preconnect" href="//cdn.optimizely.com/" crossorigin/>
+	<link rel="preconnect" href="//cdnjs.cloudflare.com" crossorigin/>
+	<link rel="preconnect" href="//d32wn3pusq02lv.cloudfront.net" crossorigin/>
+	<link rel="preconnect" href="//docplanner.com" crossorigin/>
+	<link rel="preconnect" href="//facebook.com" crossorigin/>
+	<link rel="preconnect" href="//fbstatic-a.akamaihd.net" crossorigin/>
+	<link rel="preconnect" href="//lh4.googleusercontent.com" crossorigin/>
+	<link rel="preconnect" href="//maps.google.com" crossorigin/>
+	<link rel="preconnect" href="//maps.gstatic.com" crossorigin/>
+	<link rel="preconnect" href="//maxcdn.bootstrapcdn.com/" crossorigin/>
+	<link rel="preconnect" href="//s3-eu-west-1.amazonaws.com" crossorigin/>
+	<link rel="preconnect" href="//ssl.google-analytics.com" crossorigin/>
+	<link rel="preconnect" href="//ssl.gstatic.com" crossorigin/>
+	<link rel="preconnect" href="//stats.g.doubleclick.net/" crossorigin/>
+	<link rel="preconnect" href="//www.docplanner-platform.com/" crossorigin/>
+	<link rel="preconnect" href="//platform.znamylekar.cz" crossorigin/>
+	<link rel="preconnect" href="//www.google-analytics.com" crossorigin/>
+	<link rel="preconnect" href="//www.googletagmanager.com" crossorigin/>
+	<link rel="preconnect" href="//fonts.googleapis.com" crossorigin/>
+	<link rel="preconnect" href="//fonts.gstatic.com" crossorigin/>
+	<link rel="preconnect" href="http://cdn.mxpnl.com/" crossorigin/>
+	<link rel="preconnect" href="http://d24n15hnbwhuhn.cloudfront.net/" crossorigin/>
 
 	<meta charset="utf-8"/>
 	<title>Dobrý den,
