--- a/og.html
+++ b/og.html
@@ -67,7 +67,7 @@
 	<meta property="og:title" content="Znanylekarz - Przeczytaj opinie i umów wizytę online"/>
 	<meta property="og:description" content="Szukaj spośród 146 000 lekarzy,przeczytaj opinie, zapytaj eksperta, znajdź najlepszego lekarza w twoim mieście i umów wizytę online." />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="//www.docplanner-platform.com/staging/img/pl/logo/og-brand-pl.png?3104699579" />
+	<meta property="og:image" content="/1520596574-4e0fa8de7dbeef91fb00e8337e688ed4.jpeg" />
 	<meta property="og:site_name" content="ZnanyLekarz"/>
 	<meta property="og:url" content="https://www.znanylekarz.pl/" />
 
